--- a/image/policies/files/known_vulnerabilities.json
+++ b/image/policies/files/known_vulnerabilities.json
@@ -2,9 +2,12 @@
   "name": "Any Vulnerabilities",
   "description": "Alert on deployments with any vulnerabilities",
   "severity": 1,
-  "cvss": {
-    "op": 4,
-    "math_op": 1,
-    "value": 0
+  "categories": [1],
+  "image_policy": {
+    "cvss": {
+      "op": 4,
+      "math_op": 1,
+      "value": 0
+    }
   }
 }
