--- a/image/policies/files/known_vulnerabilities.json
+++ b/image/policies/files/known_vulnerabilities.json
@@ -10,6 +10,6 @@
       "value": 0
     }
   },
-  "rationale": "Visibility into vulnerabilities allows for proper triaging and prioritization",
-  "remediation": "Speak with your security team to identify and mitigate vulnerabilities (unfortunately, not all CVE's have immediate patches)"
+  "rationale": "Visibility into vulnerabilities allows for proper triaging and prioritization.",
+  "remediation": "Speak with your security team to identify and mitigate vulnerabilities (unfortunately, not all CVEs have immediate patches)."
 }
