--- a/image/policies/files/known_vulnerabilities.json
+++ b/image/policies/files/known_vulnerabilities.json
@@ -2,7 +2,7 @@
   "name": "Any Vulnerabilities",
   "description": "Alert on deployments with any vulnerabilities",
   "severity": "LOW_SEVERITY",
-  "categories": ["IMAGE_ASSURANCE"],
+  "categories": ["Image Assurance"],
   "image_policy": {
     "cvss": {
       "op": "GREATER_THAN",
